// Abstract: collection of accessibility identifiers for UI tests.

import Foundation

enum ViewIdentifiers: String {
    case tempoText
    case tempoMarking
    case tempoField
    case tempoScroll
    case soundPicker
    case timePicker
    case contentView
    case errorMessage
    case hint
    case submitButton
    case dismissButton
}
